support java option add-opens